--- a/src/fixtures/legend/lang/lang.csv
+++ b/src/fixtures/legend/lang/lang.csv
@@ -19,15 +19,15 @@ legend.visibility.hideGroup,Hide group,1,Masquer le groupe,0
 legend.symbology.expand,Expand legend,1,Développer la légende,1
 legend.symbology.hide,Hide legend,1,Masquer la légende,1
 legend.symbology.loading,Loading...,1,Chargement en cours...,1
-legend.entry.data,Show more data,1,Afficher plus de données,1
-legend.entry.options,More options,1,Plus d'options,1
-legend.entry.controls.metadata,Metadata,1,Métadonnées,1
-legend.entry.controls.settings,Settings,1,Paramètres,1
-legend.entry.controls.datatable,Datatable,1,Tableau de données,1
-legend.entry.controls.symbology,Legend,1,Légende,1
-legend.entry.controls.boundaryzoom,Zoom to Layer Boundary,1,Zoomer à la limite,1
-legend.entry.controls.remove,Remove,1,Retirer,1
-legend.entry.controls.reload,Reload,1,Recharger,1
+legend.layer.data,Show more data,1,Afficher plus de données,1
+legend.layer.options,More options,1,Plus d'options,1
+legend.layer.controls.metadata,Metadata,1,Métadonnées,1
+legend.layer.controls.settings,Settings,1,Paramètres,1
+legend.layer.controls.datatable,Datatable,1,Tableau de données,1
+legend.layer.controls.symbology,Legend,1,Légende,1
+legend.layer.controls.boundaryzoom,Zoom to Layer Boundary,1,Zoomer à la limite,1
+legend.layer.controls.remove,Remove,1,Retirer,1
+legend.layer.controls.reload,Reload,1,Recharger,1
 legend.alert.symbologyExpanded,Layer legend expanded,1,Légende de la couche élargi,0
 legend.alert.symbologyCollapsed,Layer legend collapsed,1,Légende de la couche de fondre,0
 legend.alert.groupExpanded,Legend group expanded,1,Légende groupe élargi,0
