--- a/src/fixtures/legend/lang/lang.csv
+++ b/src/fixtures/legend/lang/lang.csv
@@ -26,6 +26,7 @@ legend.layer.controls.settings,Settings,1,Paramètres,1
 legend.layer.controls.datatable,Datatable,1,Tableau de données,1
 legend.layer.controls.symbology,Legend,1,Légende,1
 legend.layer.controls.boundaryzoom,Zoom to Layer Boundary,1,Zoomer à la limite,1
+legend.layer.controls.cancel,Cancel,1,Annuler,1
 legend.layer.controls.remove,Remove,1,Retirer,1
 legend.layer.controls.reload,Reload,1,Recharger,1
 legend.alert.symbologyExpanded,Layer legend expanded,1,Légende de la couche développée,1
