--- a/src/fixtures/grid/lang/lang.csv
+++ b/src/fixtures/grid/lang/lang.csv
@@ -22,6 +22,7 @@ grid.filters.number.max,Max,1,Max,1
 grid.filters.number.min,Min,1,Min,1
 grid.filters.label.info,{range} of {total} entries shown,1,{range} de {total} saisies affichées,1
 grid.filters.label.filtered,(filtered from {max} total entries),1,(filtré à partir d’un total de {max} saisies),1
+grid.filters.extent,Filter by extent,1,Filtrer par étendue,1
 grid.cells.zoom,Zoom to feature,1,Zoom à l'élément,1
 grid.cells.details,Details,1,Détails,1
 grid.button.title,Grid,1,Grille,1
