--- a/src/fixtures/grid/lang/lang.csv
+++ b/src/fixtures/grid/lang/lang.csv
@@ -25,5 +25,8 @@ grid.filters.label.info,{range} of {total} entries shown,1,{range} de {total} sa
 grid.filters.label.filtered,(filtered from {max} total entries),1,(filtré à partir d'un total de {max} saisies),1
 grid.filters.extent,Filter by extent,1,Filtrer par étendue,1
 grid.cells.zoom,Zoom to feature,1,Zoom à l'élément,1
+grid.cells.zoom.zooming,Zooming...,1,Zoom...,0
+grid.cells.zoom.fail,Zoom failed,1,Échec du zoom,0
+grid.cells.zoom.success,Zoomed,1,Zoomé,0
 grid.cells.details,Details,1,Détails,1
 grid.button.title,Grid,1,Grille,1
