--- a/src/fixtures/details/lang/lang.csv
+++ b/src/fixtures/details/lang/lang.csv
@@ -16,4 +16,5 @@ details.item.no.data,No data to show because the layer has been removed,1,Aucune
 details.item.alert.zoom,Zoomed into feature,1,Zoom sur la caractéristique,1
 details.item.alert.show.item,Showing result {itemName},1,Affichage du résultat {itemName},1
 details.item.alert.show.list,Showing all results for {layerName},1,Affichage de tous les résultats pour {layerName},1
+details.item.alert.defaultAltText,Image associated with {alias} field,1,Image associée au champ {alias},0
 details.togglehilight.title,Toggle Highlight,1,Basculer vers l'élément principal,1
