--- a/src/fixtures/grid/lang/lang.csv
+++ b/src/fixtures/grid/lang/lang.csv
@@ -7,10 +7,16 @@ grid.splash.building,Building table...,1,Création du tableau...,1
 grid.splash.cancel,Cancel,1,Annuler,1
 grid.clearAll,Clear search and filters,1,Effacer la recherche et les filtres,1
 grid.layer.loading,The layer is loading...,1,La couche est en cours de téléchargement...,1
+grid.label.column,Column,1,Colonne,1
 grid.label.columns,Hide columns,1,Masquer les colonnes,1
+grid.label.copied,Copied,1,Copié,0
+grid.label.copy,Copy,1,Copier,1
+grid.label.copy.error.row,Please enter a number between 1 and {max},1,Veuillez entrer un nombre entre 1 et {max},0
+grid.label.copy.error.col,Please select a column,1,Veuillez sélectionner une colonne,0
 grid.label.filters.show,Show filters,1,Afficher les filtres,1
 grid.label.filters.hide,Hide filters,1,Masquer les filtres,1
 grid.label.filters.apply,Apply filters to map,1,Appliquer les filtres à la carte,1
+grid.label.row,Row,1,Ligne,0
 grid.header.sort.0,Sort ascending,1,Tri ascendant,1
 grid.header.sort.1,Sort descending,1,Tri descendant,1
 grid.header.sort.2,Sort default,1,Tri par défaut,1
@@ -26,4 +32,6 @@ grid.filters.label.filtered,(filtered from {max} total entries),1,(filtré à pa
 grid.filters.extent,Filter by extent,1,Filtrer par étendue,1
 grid.cells.zoom,Zoom to feature,1,Zoom à l'élément,1
 grid.cells.details,Details,1,Détails,1
+grid.cells.more,More,1,Plus,1
+grid.cells.less,Less,1,Moins,1
 grid.button.title,Grid,1,Grille,1
