--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -49,4 +49,4 @@ layer.longload,{id} is taking longer than expected to load,1,Le chargement de {i
 layer.longdraw,{id} is taking longer than expected to draw,1,{id} prend plus de temps que prévu à extraire,1
 layer.mismatch,{name} cannot be displayed in the current projection,1,{name} ne peut pas être affiché dans la projection actuelle,0
 layer.filtersdisabled,Filters have been disabled for {name},1,Les filtres ont été désactivés par {name},0
-layer.filterwarning,You are attempting to use a merge grid that contains unmodifiable layers. Filtering will be partially disabled,1,Vous tentez d'utiliser une grille de fusion contenant des calques non modifiables. Le filtrage sera partiellement désactivé,0
+layer.filterwarning,You are attempting to use a grid that contains unmodifiable layers. Filtering will be partially disabled,1,Vous tentez d'utiliser une grille contenant des calques non modifiables. Le filtrage sera partiellement désactivé,0
