--- a/src/fixtures/mapnav/lang/lang.csv
+++ b/src/fixtures/mapnav/lang/lang.csv
@@ -2,6 +2,8 @@ key,enValue,enValid,frValue,frValid
 mapnav.zoomIn,Zoom In,1,Zoom avant,1
 mapnav.zoomOut,Zoom Out,1,Zoom arrière,1
 mapnav.home,Home,1,Accueil,1
+mapnav.minimizeAll,Minimize All,1,Minimiser tous,0
+mapnav.showAll,Show All,1,Afficher tout,0
 mapnav.fullscreen,Full Screen,1,Plein Écran,1
 mapnav.geolocator,Your Location,1,Votre position,1
 mapnav.geolocator.error.permission,The location request was denied. Please check your browser permission settings.,1,Demande de localisation refusée. Veuillez vérifier les paramètres d'autorisation de votre navigateur.,1
