--- a/src/fixtures/help/lang/lang.csv
+++ b/src/fixtures/help/lang/lang.csv
@@ -1,4 +1,6 @@
 key,enValue,enValid,frValue,frValid
 help.title,Help,1,Aide,1
+help.search,Search Help,1,Rechercher aide,0
 help.section.expand,Expand section,1,Développer une section,1
 help.section.collapse,Collapse section,1,Réduire une section,1
+help.noResults,Nothing is found. Please try a different search.,1,Rien n'est trouvé. S'il vous plaît, essayez une recherche différente.,0
