--- a/src/fixtures/help/lang/lang.csv
+++ b/src/fixtures/help/lang/lang.csv
@@ -1,4 +1,5 @@
 key,enValue,enValid,frValue,frValid
 help.title,Help,1,Aide,1
+help.search,Search Help,1,Rechercher aide,0
 help.section.expand,Expand section,1,Développer une section,1
 help.section.collapse,Collapse section,1,Réduire une section,1
