--- a/src/fixtures/wizard/lang/lang.csv
+++ b/src/fixtures/wizard/lang/lang.csv
@@ -38,6 +38,7 @@ wizard.configure.sublayers.label,Layers,1,Couches,1
 wizard.configure.sublayers.results,No results,1,Pas de résultats,0
 wizard.configure.sublayers.search,Search layers,1,Rechercher des couches,1
 wizard.configure.sublayers.select,Select layer(s),1,Sélectionner le(s) couche(s),0
+wizard.configure.sublayers.nested,Nested,1,Imbriqué,0
 wizard.configure.colour.label,Colour,1,Couleur,1
 wizard.configure.colour.hue,Hue,1,Teinte,1
 wizard.configure.colour.copy,Copy colour,1,Copier la couleur,1
