display panel title tooltip on keyboard focus

--- a/src/fixtures/geosearch/lang/lang.csv
+++ b/src/fixtures/geosearch/lang/lang.csv
@@ -1,5 +1,5 @@
 key,enValue,enValid,frValue,frValid
-geosearch.title,Geolocation Search,1,Recherche géolocalisée,1
+geosearch.title,Geolocation Searchhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,1,Recherche géolocalisée,1
 geosearch.noResults,No results to show for ,1,Aucun résultat à afficher pour ,1
 geosearch.searchText,Search for a location...,1,Rechercher un emplacement...,1
 geosearch.visible,Visible on map,1,Visible sur la carte,1
