--- a/src/fixtures/details/lang/lang.csv
+++ b/src/fixtures/details/lang/lang.csv
@@ -8,7 +8,12 @@ details.layers.results.empty,No results found for any layer.,1,Aucun résultat t
 details.layers.results.empty.currentLayer,No results found for the selected layer.,1,Aucun résultat trouvé pour la couche sélectionnée.,1
 details.layers.results.empty.noLayers,No layers for identification.,1,Pas de couches pour l'identification.,0
 details.result.default.name,Identify Item {0},1,Désigner l'élément {0},1
+details.loading,Loading...,1,Chargement en cours...,1
 details.items.title,Details,1,Détails,1
+details.items.range,{0} to {1} of {2},1,{0} à {1} de {2},0
+details.items.next,Next page,1,Page suivante,0
+details.items.previous,Previous page,1,Page précédente,0
+details.items.page,Items per page,1,éléments par page,0
 details.item.see.list,See List,1,Voir la liste,1
 details.item.zoom,Zoom to feature,1,Zoom à l'élément,1
 details.item.zoom.zooming,Zooming...,1,Zoom en cours...,1
