--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -25,6 +25,8 @@ map.language.en,English,1,English,1
 map.language.fr,Français,1,Français,1
 map.language.curr,current,1,actuel,1
 map.export,export map,1,exporter la carte,1
+map.layerSwipe.drag,Drag and slide to move,1,Faites glisser et glissez pour déplacer,0
+map.layerSwipe.label,Layer swipe,1,Glissement de calque,0
 notifications.open,Open Notifications Panel,1,Ouvrir la fenêtre des notifications,1
 notifications.title,Notifications,1,Notifications,1
 notifications.empty,No new notifications.,1,Aucune nouvelle notification.,1
